cabal-version:      2.4
name:               halflife
version:            0.1.0.0

executable halflife
    main-is:          Main.hs
    ghc-options:      -Wall -fdefer-typed-holes -threaded
    build-depends:    base ^>=4.14.1.0
                    , GPipe-Core
                    , GPipe-GLFW4
                    , JuicyPixels
                    , atlas
                    , bytestring
                    , cereal
                    , directory
                    , ghc-heap-view
                    , gl
                    , lens
                    , linear
                    , mmap
                    , text
                    , vector
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules:    Studio
