cabal-version:      2.4
name:               halflife
version:            0.1.0.0

executable halflife
    main-is:          Main.hs
    ghc-options:      -Wall -fdefer-typed-holes -threaded
    default-extensions: BlockArguments
                      , FlexibleContexts
                      , OverloadedStrings
                      , RecordWildCards
                      , ScopedTypeVariables
    build-depends:    GPipe-Core
                    , GPipe-GLFW4
                    , JuicyPixels
                    , atlas
                    , base ^>=4.14.1.0
                    , bytestring
                    , cereal
                    , directory
                    , ghc-heap-view
                    , gl
                    , lens
                    , linear
                    , mmap
                    , mtl
                    , text
                    , vector
                    , pipes
                    , recursion-schemes
                    , data-fix
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules:    Engine.File.Studio
                    , Engine.File.Bsp
                    , Util.Pipes
                    , Util.SGet
                    , Util.Geometry
                    , Engine.Render.Bsp
