cabal-version:      2.4
name:               halflife
version:            0.1.0.0

executable halflife
    main-is:          Main.hs
    ghc-options:      -threaded -rtsopts
                      -Wall
                      -Wno-partial-type-signatures
                      -Wno-missing-signatures
                      -fdefer-typed-holes
    default-extensions: BlockArguments
                      , FlexibleContexts
                      , OverloadedStrings
                      , RecordWildCards
                      , ScopedTypeVariables
                      , Arrows
                      , PartialTypeSignatures
                      , TupleSections
                      , NamedFieldPuns
    build-depends:    GPipe-Core
                    , GPipe-GLFW4
                    , JuicyPixels
                    , atlas
                    , base ^>=4.14.1.0
                    , bitvec
                    , bytestring
                    , cereal
                    , data-default
                    , data-fix
                    , directory
                    , gl
                    , lens
                    , linear
                    , mmap
                    , mtl
                    , netwire
                    , pipes
                    , recursion-schemes
                    , text
                    , time
                    , vector
                    , ghc-compact
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules:    Engine.File.Studio
                    , Engine.File.Bsp
                    , Engine.File.Texture
                    , Engine.File.Wad
                    , Engine.Util.Pipes
                    , Engine.Util.SGet
                    , Engine.Util.Geometry
                    , Engine.Render.Bsp
                    , Engine.Render.Texture
                    , Engine.Player
                    , Engine.Logic
                    , Engine.World
                    , Engine.BspTree
